# pdftools

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/src/app/: config.py  main.py
backend/src/app/visit/: constants.py  dependencies.py
frontend/: index.html
frontend/assets/styles/: base.css  components.css  layout.css
frontend/src/: main.js
frontend/src/api/: fetch.js  visit.js
frontend/src/files/: drop.js
frontend/src/layout/: resize.js
scripts/: app.py  render_project_tree.py
